# code

./: .gitignore  Agent.md  README.md  TESTING.md  issue.md  issues.md  pyproject.toml
doc/research/: Web RPA harness自动化测试用例构建.md  Web RPA 可实施实现方案.md  Web RPA 实现方式深度研究报告.md  Web RPA实现思路.md  Web RPA实现思路以及网络加载等待调研.md
openspec/changes/add-python-web-rpa-mvp/: design.md  proposal.md  tasks.md
openspec/changes/add-python-web-rpa-mvp/specs/python-web-rpa-cli/: spec.md
tests/: test_e2e_contract.py  test_flow.py  test_locator_resolver.py  test_network_monitor.py  test_recorder_injection.py  test_replay.py  test_report.py  test_selector_builder.py  test_wait_manager.py  test_workflow.py
tests/fixtures/crm_app/: index.html
web_rpa/: __init__.py  browser.py  cli.py  errors.py  flow.py  injected_recorder.js  locator_resolver.py  network_monitor.py  recorder.py  replay.py  report.py  selector_builder.py  wait_manager.py  workflow.py
